--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "/Lógica de Programação, Estrutura de Dados e Algoritmos",
   "scripts": {
     "dev": "vuepress dev src",
-    "docs:build": "vuepress build src"
+    "build": "vuepress build src"
   },
   "license": "MIT",
   "devDependencies": {
